[UPDATE] BJS2-77762 Слушатель Kafka-эвентов для комментов.